WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206976
[GStreamer] Fix build with ACCELERATED_2D_CANVAS enabled
https://bugs.webkit.org/show_bug.cgi?id=206976
Summary
[GStreamer] Fix build with ACCELERATED_2D_CANVAS enabled
Sergio Villar Senin
Reported
2020-01-29 17:21:14 PST
[GStreamer] Fix build with ACCELERATED_2D_CANVAS enabled
Attachments
Patch
(1.70 KB, patch)
2020-01-29 17:23 PST
,
Sergio Villar Senin
pnormand
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2020-01-29 17:23:06 PST
Created
attachment 389205
[details]
Patch
Sergio Villar Senin
Comment 2
2020-01-30 06:12:29 PST
Committed
r255423
: <
https://trac.webkit.org/changeset/255423
>
Radar WebKit Bug Importer
Comment 3
2020-01-30 06:13:13 PST
<
rdar://problem/59026403
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug