[GStreamer] Fix build with ACCELERATED_2D_CANVAS enabled https://bugs.webkit.org/show_bug.cgi?id=206976

Reviewed by Philippe Normand.

When ACCELERATED_2D_CANVAS is enabled the MediaPlayerPrivate uses both PlatformDisplay and
GLContext that were undefined. Apart from that all the MediaPlayer::PreLoad::None enums fail
because cairo-gl.h ends up including X.h which already defines None.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:

Canonical link: https://commits.webkit.org/220009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255423 268f45cc-cd09-0410-ab3c-d52691b4dbfc